@@ -12,17 +12,3 @@ A JavaFX, Kotlin GUI for Discord Bots
 #### Resources
 [JavaFX Settings and Docs](https://openjfx.io/openjfx-docs/)
 
-#### VM Options: 
-`
---module-path "E:\Programme\Java\javafx-sdk-11.0.2\lib" 
---add-modules=javafx.controls,javafx.fxml 
---add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED 
---add-opens javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED 
---add-opens javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED 
---add-opens javafx.base/com.sun.javafx.binding=ALL-UNNAMED 
---add-opens javafx.base/com.sun.javafx.event=ALL-UNNAMED 
---add-opens javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED
-`
-
-#### Program Arguments
-`--add-exports=javafx.graphics/com.sun.javafx.baro.util=ALL-UNNAMED`
